@@ -10,6 +10,8 @@ requires 'CatalystX::Component::Traits' => '0.14';
 
 requires 'Moose' => '1.12';
 requires 'MooseX::Types';
+requires 'MooseX::Types::LoadableClass' => 0.009;
+requires 'Module::Runtime' => '0.012';
 requires 'namespace::autoclean' => 0.09;
 requires 'Carp::Clan';
 requires 'List::MoreUtils';
